<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2017 Cisco Systems Inc and others.  All rights reserved.
  ~
  ~ This program and the accompanying materials are made available under the
  ~ terms of the Eclipse Public License v1.0 which accompanies this distribution,
  ~ and is available at http://www.eclipse.org/legal/epl-v10.html
  -->

<project xmlns="http://maven.apache.org/POM/4.0.2"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.2 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>org.opendaylight.mdsal</groupId>
        <artifactId>binding-parent</artifactId>
        <version>5.0.10</version>
        <relativePath/>
    </parent>

    <properties>
        <mdsal.version>5.0.10</mdsal.version>
    </properties>

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.opendaylight.unimgr</groupId>
    <artifactId>unimgr-template-driver</artifactId>
    <version>0.6.0-SNAPSHOT</version>
    <packaging>bundle</packaging>

    <name>ODL :: unimgr :: ${project.artifactId}</name>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- dependencies -->

    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>unimgr-impl</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- unit test dependencies -->
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>unimgr-impl</artifactId>
            <version>${project.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <!-- dependencies to use AbstractConcurrentDataBrokerTest -->
        <dependency>
            <groupId>org.opendaylight.mdsal</groupId>
            <artifactId>mdsal-binding-dom-adapter</artifactId>
            <version>${mdsal.version}</version>
            <classifier>tests</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.opendaylight.mdsal</groupId>
            <artifactId>mdsal-binding-dom-adapter</artifactId>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.10.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
